consertando a bagunça dos outros
consertei um monte de erro idiota de vcs